<resources>
    <string name="app_name" translatable="false">Cart Minder</string>
    <string name="hint_title">Title</string>
    <string name="hint_time">Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="warning_input_is_empty">input cannot be empty</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="hint_description">Description</string>
    <string name="hint_price">Price</string>
    <string name="price_value">Rp. 50.000</string>
    <string name="button_view_details">View Details</string>
    <string name="hint_category">Category</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_details">Item Details</string>
    <string name="hint_path">File Path</string>
    <string name="button_add_details">Add Details</string>
    <string name="button_edit_details">Edit Details</string>
    <string name="hint_image_path">Image Path</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="colon" translatable="false">:</string>
    <string name="choose_image">Choose Image</string>
    <string name="hint_total_price">Total : Rp. 50,000</string>
    <string name="toast_message_no_detail">Item doesn\'t have any details</string>
    <string name="toast_message_alarm_prefix">Alarm set for</string>
    <string name="notification_title">[CartMinder] Alarm Is Up</string>
    <string name="notification_message_prefix">It is time to go shopping for</string>
</resources>