<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AddEditCartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_title"
            android:focusable="false"
            android:hint="@string/hint_time"
            android:inputType="text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/edit_time"
            android:layout_above="@id/cart_total_items_price"
            android:layout_marginVertical="5dp"
            tools:listitem="@layout/card_item" />

        <TextView
            android:id="@+id/cart_total_items_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="80dp"
            android:gravity="end"
            android:textAlignment="gravity"
            android:text="@string/price_value"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/items_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="30dp"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/design_default_color_primary"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>