<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragment.CartFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/cart_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart_title"
        android:layout_marginTop="5dp"
        android:text="@string/hint_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart_time"
        android:layout_above="@id/cart_total_items_price"
        android:layout_marginVertical="5dp"
        tools:listitem="@layout/card_item" />

    <TextView
        android:id="@+id/cart_total_items_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:textAlignment="gravity"
        android:text="@string/price_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>