<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragment.ItemDetailFragment">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/ia_image_gallery_background"
        android:src="@drawable/ia_image_gallery_foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/item_detail_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/item_detail_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/item_detail_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:minHeight="100dp"
        android:padding="10dp"
        android:text="@string/hint_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>